--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name='coverage' content='Worldwide'>
     <meta name='distribution' content='Global'>
     <meta name='rating' content='General'>
+    <meta name="robots" content="index, follow">
     
     <meta property="og:title" content="Arthur Manceau">
     <meta property="og:description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
