--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name='distribution' content='Global'>
     <meta name='rating' content='General'>
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="z7QXkIf-qxFceaXWFMFfF4k9hGOFvKA0euzecoNiCE0" />
     
     <meta property="og:title" content="Arthur Manceau">
     <meta property="og:description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
