--- a/projects/others/darkMode/index.html
+++ b/projects/others/darkMode/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <title>darkMode projet en cours</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Dark-mode</title>
 </head>
 <body>
-    
-    <div class="container">
-        <div class="banniere-titre">
-            <h1>DARK MODE</h1>
+
+    <div class="d-flex w-100 h-100 flex-column align-items-center justify-content-center container-switch">
+        <div>
+            <h1 class="title">DARK MODE</h1>
         </div>
+
         <div class="switch">
             <i class="fas fa-moon"></i>
-            <div class="btn">
-            </div>
+            <div class="btn"></div>
         </div>
-    </div>
-   
+    </div>  
 
     <script src="script.js"></script>
 </body>
